one more improvement around cond format rendering, fdo#57896

Change-Id: I5eb267ec2d1666edd53f5b9d58fd2a0cec044aa1
Reviewed-on: https://gerrit.libreoffice.org/1684
Reviewed-by: Noel Power <noel.power@suse.com>
Tested-by: Noel Power <noel.power@suse.com>